# okay-sounds-good-buddy

./: .config.example.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  oksg  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: ci.yml
docs/: configuration.md  google-drive.md  harleys-guide.md  release-and-safety.md  testing-gaps.md  windows-and-wsl.md
src/oksg_buddy/: __init__.py  __main__.py  archives.py  cli.py  config.py  media.py  models.py  naming.py  shared.py  thumbnails.py
src/oksg_buddy/commands/: __init__.py  audit_shared.py  configure.py  doctor.py  finish_song.py  install_shim.py  new_song.py  normalize_shared.py  repair_shared_videos.py  repair_shared_zips.py  thumbnail.py
tests/: __init__.py  support.py
tests/integration/: __init__.py  test_finish_song.py  test_shared_repairs.py
tests/unit/: __init__.py  test_configuration.py  test_files_and_zips.py  test_metadata_and_naming.py  test_public_readiness.py  test_stage4_cli.py  test_thumbnail.py
